// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bar/Lines chart - Simple day 1`] = `
Object {
  "chart": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "04/10",
        "value": 0,
      },
      Object {
        "key": "05/10",
        "value": 0,
      },
      Object {
        "key": "06/10",
        "value": 0,
      },
      Object {
        "key": "07/10",
        "value": 0,
      },
      Object {
        "key": "08/10",
        "value": 0,
      },
      Object {
        "key": "09/10",
        "value": 0,
      },
      Object {
        "key": "10/10",
        "value": 0,
      },
      Object {
        "key": "11/10",
        "value": 0,
      },
      Object {
        "key": "12/10",
        "value": 0,
      },
      Object {
        "key": "13/10",
        "value": 0,
      },
      Object {
        "key": "14/10",
        "value": 0,
      },
      Object {
        "key": "15/10",
        "value": 0,
      },
      Object {
        "key": "16/10",
        "value": 0,
      },
      Object {
        "key": "17/10",
        "value": 0,
      },
      Object {
        "key": "18/10",
        "value": 0,
      },
      Object {
        "key": "19/10",
        "value": 0,
      },
      Object {
        "key": "20/10",
        "value": 0,
      },
      Object {
        "key": "21/10",
        "value": 0,
      },
      Object {
        "key": "22/10",
        "value": 0,
      },
      Object {
        "key": "23/10",
        "value": 0,
      },
      Object {
        "key": "24/10",
        "value": 0,
      },
      Object {
        "key": "25/10",
        "value": 0,
      },
      Object {
        "key": "26/10",
        "value": 0,
      },
      Object {
        "key": "27/10",
        "value": 0,
      },
      Object {
        "key": "28/10",
        "value": 0,
      },
      Object {
        "key": "29/10",
        "value": 0,
      },
      Object {
        "key": "30/10",
        "value": 0,
      },
      Object {
        "key": "31/10",
        "value": 0,
      },
      Object {
        "key": "01/11",
        "value": 0,
      },
      Object {
        "key": "02/11",
        "value": 0,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple month 1`] = `
Object {
  "chart": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "Dec",
        "value": 0,
      },
      Object {
        "key": "Jan",
        "value": 0,
      },
      Object {
        "key": "Feb",
        "value": 0,
      },
      Object {
        "key": "Mar",
        "value": 0,
      },
      Object {
        "key": "Apr",
        "value": 0,
      },
      Object {
        "key": "May",
        "value": 0,
      },
      Object {
        "key": "Jun",
        "value": 0,
      },
      Object {
        "key": "Jul",
        "value": 0,
      },
      Object {
        "key": "Aug",
        "value": 0,
      },
      Object {
        "key": "Sep",
        "value": 0,
      },
      Object {
        "key": "Oct",
        "value": 0,
      },
      Object {
        "key": "Nov",
        "value": 0,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple week 1`] = `
Object {
  "chart": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "2021-05-10",
        "value": 0,
      },
      Object {
        "key": "2021-05-17",
        "value": 0,
      },
      Object {
        "key": "2021-05-24",
        "value": 0,
      },
      Object {
        "key": "2021-05-31",
        "value": 0,
      },
      Object {
        "key": "2021-06-07",
        "value": 0,
      },
      Object {
        "key": "2021-06-14",
        "value": 0,
      },
      Object {
        "key": "2021-06-21",
        "value": 0,
      },
      Object {
        "key": "2021-06-28",
        "value": 0,
      },
      Object {
        "key": "2021-07-05",
        "value": 0,
      },
      Object {
        "key": "2021-07-12",
        "value": 0,
      },
      Object {
        "key": "2021-07-19",
        "value": 0,
      },
      Object {
        "key": "2021-07-26",
        "value": 0,
      },
      Object {
        "key": "2021-08-02",
        "value": 0,
      },
      Object {
        "key": "2021-08-09",
        "value": 0,
      },
      Object {
        "key": "2021-08-16",
        "value": 0,
      },
      Object {
        "key": "2021-08-23",
        "value": 0,
      },
      Object {
        "key": "2021-08-30",
        "value": 0,
      },
      Object {
        "key": "2021-09-06",
        "value": 0,
      },
      Object {
        "key": "2021-09-13",
        "value": 0,
      },
      Object {
        "key": "2021-09-20",
        "value": 0,
      },
      Object {
        "key": "2021-09-27",
        "value": 0,
      },
      Object {
        "key": "2021-10-04",
        "value": 0,
      },
      Object {
        "key": "2021-10-11",
        "value": 0,
      },
      Object {
        "key": "2021-10-18",
        "value": 0,
      },
      Object {
        "key": "2021-10-25",
        "value": 0,
      },
      Object {
        "key": "2021-11-01",
        "value": 0,
      },
    ],
  },
}
`;

exports[`Bar/Lines chart - Simple year 1`] = `
Object {
  "chart": Object {
    "config": Object {
      "xaxis": Array [
        Object {
          "dataKey": "key",
        },
      ],
      "yaxis": Array [
        Object {
          "dataKey": "value",
        },
      ],
    },
    "data": Array [
      Object {
        "key": "2014",
        "value": 0,
      },
      Object {
        "key": "2015",
        "value": 0,
      },
      Object {
        "key": "2016",
        "value": 0,
      },
      Object {
        "key": "2017",
        "value": 0,
      },
      Object {
        "key": "2018",
        "value": 0,
      },
      Object {
        "key": "2019",
        "value": 0,
      },
      Object {
        "key": "2020",
        "value": 0,
      },
      Object {
        "key": "2021",
        "value": 0,
      },
    ],
  },
}
`;
